# task3a

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bot/lib/bot/: arm  dock  nav
install/bot/share/bot/: package.ps1  package.sh
install/ebot_docking/share/ebot_docking/: local_setup.sh  package.sh
install/ebot_nav2/share/ebot_nav2/: local_setup.sh  package.sh
install/ff/lib/ff/: arm  arm.py  dock  dock.py  globals.py  go  nav  nav.py
install/ff/share/ff/: package.dsv  package.ps1  package.sh  package.xml
install/fin/lib/fin/: arm  arm.py  dock  nav
install/fin/share/fin/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/jk/lib/jk/: arm  dock  (+1 more)
log/: latest_build  latest_list
src/bot/: package.xml  setup.py
src/bot/bot/: arm.py  dock.py  dock5.py  nav.py  nav5.py
src/ebot_docking/: CMakeLists.txt
src/ebot_docking/scripts/: dock.py  h_dock.py  h_nav.py  hard_dock.py  hard_nav.py  nav.py  nav5.py  s_dock.py  s_nav.py
src/ebot_docking/srv/: DockSw.srv  PassingService.srv
src/ebot_nav2/params/: nav2_params.yaml
src/ff/: setup.py
src/ff/ff/: arm.py  dock.py  eval.txt  nav.py  run.py
src/fin/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/fin/fin/: arm.py  dock.py  nav.py  navminus.py  navplus.py  navtrust.py
src/fin/src/: arm.cpp  arm.py  dock.cpp  nav.cpp
src/jk/: package.xml  setup.cfg  setup.py
src/jk/jk/: arm.py  dock.py  nav.py
src/l/: package.xml  setup.cfg  setup.py
src/l/l/: run.py
src/ur5_control/: setup.py
src/ur5_control/ur5_control/: 3a.py  arm.py  arm2.py  arm5.py  working.py
src/usb_servo/: CMakeLists.txt  package.xml
(+91 files in other folders)
